--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,12 +1,13 @@
+
 .gradient-custom-2 {
   /* fallback for old browsers */
-  background: #fccb90;
+  background: #f18e14;
 
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  background: -webkit-linear-gradient(to right,#B247F7, #7D2BC0,#621DA3);
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  background: linear-gradient(to right,  #B247F7, #7D2BC0,#621DA3);
 }
 
 @media (min-width: 768px) {
@@ -19,4 +20,33 @@
     border-top-right-radius: .3rem;
     border-bottom-right-radius: .3rem;
   }
+}
+@keyframes buttonAnimation {
+  from {background: #621DA3 ;}
+  to {background: #f18e14 ;}
+}
+.sign:hover {
+    
+    animation: buttonAnimation ;
+    animation-duration: 500ms ;
+    animation-fill-mode: forwards;
+}
+.btn{
+    background-color: rgba(0, 0, 0, 0)!important;
+    color: #240046!important;
+    padding: 11px 15px !important;
+    border: 2px #240046 solid!important;
+    border-radius: 10px !important;
+    font-weight:bolder !important;
+    font-size: 16px !important;
+    filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.25))!important;
+    transition: .2s ease-in-out!important;
+}
+.btn:hover{
+    color:white!important;
+    background-color: #240046!important;
+    transition: .1s ease-in-out!important;
+}
+#forget:hover{
+  color:#f18e14!important;
 }
