--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,34 +1,34 @@
 
 .logo img {
-  width: 139px;
-  height: 133px;
+  width: 100%;
+  height: 100px;
 }
 
 nav ul {
   list-style: none;
-  display: inline;
+  display: flex;
 }
 
-nav ul li {
+.link {
   display: inline;
   padding: 30px;
   font-size: 17px;
   color: #240046;
-}
-
-nav ul li a {
   text-decoration: none;
   transition: .2s ease-in-out;
 }
 
-nav ul li a:hover {
+.link:hover{
   font-size: 20px;
   transition: .2s ease-in-out;
+  color: #FF9100;
 }
 
 
 
-nav ul li a:active {
+
+
+.link:active {
   text-decoration: none;
   color: #000000;
 }
