--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -10,6 +10,17 @@
   background: linear-gradient(to right,  #B247F7, #7D2BC0,#621DA3);
 }
 
+.no-scroll {
+  overflow:hidden;
+  height: 100vh;
+}
+@media (max-width: 767px) {
+  .no-scroll {
+    max-height: 100vh;
+    overflow-y: auto;
+  }
+}
+
 @media (min-width: 768px) {
   .gradient-form {
     height: 100vh !important;
