--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,7 +1,7 @@
 
 .logo img {
-  width: 100%;
-  height: 100px;
+  width: 100px;
+  height: auto;
 }
 
 nav ul {
@@ -57,4 +57,15 @@ nav {
   align-items: center;
   justify-content: space-between;
   margin: 0px 20px;
+}
+
+
+.ensiaLogo{
+  background-color: #240046;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  border-radius:10px;
+  padding-left: 0;
+  border: solid 3px #FF9100;
 }
