--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -100,18 +100,48 @@ footer .slider .left-arrow:hover {
   width: 100%;
 
 }
+.footer-paragraph{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  padding-left: 10px;
+  padding-top: 5px;
+  z-index: 1;
+
+}
 .wave-wrapper{
   position: relative;
+
  
 }
 #wave{
   margin: 0px;
   position: absolute;
   left: 0;
-  top: 0;
+  top: 30;
 }
 path{
   width: 100%;
   margin: 0px;
   padding: 0px;
+}
+#join{
+  margin: 30px;
+  height: 100px;
+  background-color: rgba(0, 0, 0, 0);
+  color: #240046;
+  padding: 11px 15px;
+  border: 2px #240046 solid;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.25));
+  transition: .2s ease-in-out;
+}
+
+ #join:hover {
+  background-color: #240046;
+  color: #ffffff;
+  transition: .1s ease-in-out;
 }
