--- a/src/Components/main/main.css
+++ b/src/Components/main/main.css
@@ -24,16 +24,19 @@ main button {
 }
 
 main .text-block {
-  padding: 40px;
-  
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-bottom: 0px;
 }
 
 main button {
-  width: 93.26px;
-  height: 30px;
+  padding: 0px;
+  margin:auto;
+  width: 80%;
+  height: 30%;
   background: #FF9100;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: 25px;
   border: none;
   font-weight: 500;
 }
@@ -43,3 +46,6 @@ main button:hover {
   color: #ff9100;
   transition: .1s ease;
 }
+
+
+
