--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,11 +1,12 @@
 
 .logo img {
-  width: 100px;
-  height: auto;
+  width: 140px;
+  height: 140px;
 }
 
 nav ul {
   list-style: none;
+  margin: 0px;
   display: flex;
 }
 
@@ -53,6 +54,7 @@ nav button:hover {
 
 nav {
   font-family: 'Jost', sans-serif;
+  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -64,8 +66,8 @@ nav {
   background-color: #240046;
   width: 100px;
   display: flex;
+
   justify-content: center;
   border-radius:10px;
-  padding-left: 0;
   border: solid 3px #FF9100;
 }
